--- a/Compiler/MSIL/copy/1.ilasm.html
+++ b/Compiler/MSIL/copy/1.ilasm.html
@@ -32,13 +32,13 @@
   <B><FONT COLOR=NAVY>.ver</FONT></B> 0:0:0:0
 }
 <B><FONT COLOR=NAVY>.module</FONT></B> '1.exe'
-<I><FONT COLOR=GREEN>// MVID: {FA2EB12D-6EB8-496A-8ED5-78730BD1360D}</FONT></I>
+<I><FONT COLOR=GREEN>// MVID: {B49F6BE0-3E7C-4268-A72E-BE61D161D005}</FONT></I>
 <B><FONT COLOR=NAVY>.imagebase</FONT></B> 0x00400000
 <B><FONT COLOR=NAVY>.file alignment</FONT></B> 0x00000200
 <B><FONT COLOR=NAVY>.stackreserve</FONT></B> 0x00100000
 <B><FONT COLOR=NAVY>.subsystem</FONT></B> 0x0003       <I><FONT COLOR=GREEN>// WINDOWS_CUI</FONT></I>
 <B><FONT COLOR=NAVY>.corflags</FONT></B> 0x00000001<I><FONT COLOR=GREEN>    //  ILONLY</FONT></I>
-<I><FONT COLOR=GREEN>// Image base: 0x01930000</FONT></I>
+<I><FONT COLOR=GREEN>// Image base: 0x013F0000</FONT></I>
 
 
 <I><FONT COLOR=GREEN>// =============== CLASS MEMBERS DECLARATION ===================</FONT></I>
@@ -53,26 +53,20 @@
     <B><FONT COLOR=NAVY>.maxstack</FONT></B>  8
     <B><FONT COLOR=NAVY>.language</FONT></B> '{3F5162F8-07C6-11D3-9053-00C04FA302A1}', '{994B45C4-E6E9-11D2-903F-00C04FA302A1}', '{5A869D0B-6611-11D3-BD2A-0000F80849BD}'
 <I><FONT COLOR=GREEN>// Source File 'c:\Users\ianoo\Source\Repos\C_Compiler\Compiler\MSIL\copy\1.cs' </FONT></I>
-<I><FONT COLOR=GREEN>//000009:     }</FONT></I>
+<I><FONT COLOR=GREEN>//000005:     }</FONT></I>
     IL_0000:  <B><FONT COLOR=NAVY>ret</FONT></B>
   } <I><FONT COLOR=GREEN>// end of method Program::</FONT></I><I><FONT COLOR=GREEN>Main</FONT></I>
 
-  <A NAME=A06000002><B><FONT COLOR=NAVY>.method</FONT></B></A> <B><FONT COLOR=NAVY>public hidebysig static </FONT></B><B><FONT COLOR=NAVY></FONT></B><B><FONT COLOR=NAVY>void</FONT></B>  Test()<B><FONT COLOR=NAVY> cil managed</FONT></B>
+  <A NAME=A06000002><B><FONT COLOR=NAVY>.method</FONT></B></A> <B><FONT COLOR=NAVY>public hidebysig static </FONT></B><B><FONT COLOR=NAVY></FONT></B><B><FONT COLOR=NAVY>void</FONT></B>  Test(<B><FONT COLOR=NAVY>string</FONT></B> a)<B><FONT COLOR=NAVY> cil managed</FONT></B>
   {
     // Размер кода:       7 (0x7)
-    <B><FONT COLOR=NAVY>.maxstack</FONT></B>  2
-    <B><FONT COLOR=NAVY>.locals </FONT></B><B><FONT COLOR=NAVY>init </FONT></B>([0] <B><FONT COLOR=NAVY>int32</FONT></B> h)
-<I><FONT COLOR=GREEN>//000010: </FONT></I>
-<I><FONT COLOR=GREEN>//000011:     public static void Test(){</FONT></I>
-<I><FONT COLOR=GREEN>//000012:       int h=0;</FONT></I>
-    IL_0000:  <B><FONT COLOR=NAVY>ldc.i4.0</FONT></B>
-    IL_0001:  <B><FONT COLOR=NAVY>stloc.0</FONT></B>
-<I><FONT COLOR=GREEN>//000013:       h++;</FONT></I>
-    IL_0002:  <B><FONT COLOR=NAVY>ldloc.0</FONT></B>
-    IL_0003:  <B><FONT COLOR=NAVY>ldc.i4.1</FONT></B>
-    IL_0004:  <B><FONT COLOR=NAVY>add</FONT></B>
-    IL_0005:  <B><FONT COLOR=NAVY>stloc.0</FONT></B>
-<I><FONT COLOR=GREEN>//000014:     }</FONT></I>
+    <B><FONT COLOR=NAVY>.maxstack</FONT></B>  8
+<I><FONT COLOR=GREEN>//000006: </FONT></I>
+<I><FONT COLOR=GREEN>//000007:     public static void Test(string a){</FONT></I>
+<I><FONT COLOR=GREEN>//000008:       Console.WriteLine(a);</FONT></I>
+    IL_0000:  <B><FONT COLOR=NAVY>ldarg.0</FONT></B>
+    IL_0001:  <B><FONT COLOR=NAVY>call</FONT></B> <B><FONT COLOR=NAVY></FONT></B><B><FONT COLOR=NAVY>void</FONT></B> [<A HREF=#A23000001>mscorlib</A>]System.Console::WriteLine(<B><FONT COLOR=NAVY>string</FONT></B>)
+<I><FONT COLOR=GREEN>//000009:     }</FONT></I>
     IL_0006:  <B><FONT COLOR=NAVY>ret</FONT></B>
   } <I><FONT COLOR=GREEN>// end of method Program::</FONT></I><I><FONT COLOR=GREEN>Test</FONT></I>
 
