--- a/Compiler/MSIL/copy/1.ilasm.html
+++ b/Compiler/MSIL/copy/1.ilasm.html
@@ -32,13 +32,13 @@
   <B><FONT COLOR=NAVY>.ver</FONT></B> 0:0:0:0
 }
 <B><FONT COLOR=NAVY>.module</FONT></B> '1.exe'
-<I><FONT COLOR=GREEN>// MVID: {CDB10E68-2E08-4064-819B-EAFE6580E7E3}</FONT></I>
+<I><FONT COLOR=GREEN>// MVID: {17DFDF44-ADD0-448B-83DE-E9BFECEA71E4}</FONT></I>
 <B><FONT COLOR=NAVY>.imagebase</FONT></B> 0x00400000
 <B><FONT COLOR=NAVY>.file alignment</FONT></B> 0x00000200
 <B><FONT COLOR=NAVY>.stackreserve</FONT></B> 0x00100000
 <B><FONT COLOR=NAVY>.subsystem</FONT></B> 0x0003       <I><FONT COLOR=GREEN>// WINDOWS_CUI</FONT></I>
 <B><FONT COLOR=NAVY>.corflags</FONT></B> 0x00000001<I><FONT COLOR=GREEN>    //  ILONLY</FONT></I>
-<I><FONT COLOR=GREEN>// Image base: 0x01970000</FONT></I>
+<I><FONT COLOR=GREEN>// Image base: 0x00D20000</FONT></I>
 
 
 <I><FONT COLOR=GREEN>// =============== CLASS MEMBERS DECLARATION ===================</FONT></I>
@@ -62,31 +62,26 @@
 
   <A NAME=A06000002><B><FONT COLOR=NAVY>.method</FONT></B></A> <B><FONT COLOR=NAVY>public hidebysig static </FONT></B><B><FONT COLOR=NAVY></FONT></B><B><FONT COLOR=NAVY>void</FONT></B>  Test(<B><FONT COLOR=NAVY>int32</FONT></B> c)<B><FONT COLOR=NAVY> cil managed</FONT></B>
   {
-    // Размер кода:       27 (0x1b)
-    <B><FONT COLOR=NAVY>.maxstack</FONT></B>  2
-    <B><FONT COLOR=NAVY>.locals </FONT></B><B><FONT COLOR=NAVY>init </FONT></B>([0] <B><FONT COLOR=NAVY>int32</FONT></B> b,
-             [1] <B><FONT COLOR=NAVY>string</FONT></B> a)
+    // Размер кода:       23 (0x17)
+    <B><FONT COLOR=NAVY>.maxstack</FONT></B>  1
+    <B><FONT COLOR=NAVY>.locals </FONT></B><B><FONT COLOR=NAVY>init </FONT></B>([0] <B><FONT COLOR=NAVY>string</FONT></B> a)
 <I><FONT COLOR=GREEN>//000007:       public static void Test(int c) {</FONT></I>
 <I><FONT COLOR=GREEN>//000008:             int b;</FONT></I>
 <I><FONT COLOR=GREEN>//000009:             b = 1;</FONT></I>
-    IL_0000:  <B><FONT COLOR=NAVY>ldc.i4.1</FONT></B>
-    IL_0001:  <B><FONT COLOR=NAVY>stloc.0</FONT></B>
 <I><FONT COLOR=GREEN>//000010:             c = 10;</FONT></I>
-    IL_0002:  <B><FONT COLOR=NAVY>ldc.i4.s</FONT></B> 10
-    IL_0004:  <B><FONT COLOR=NAVY>starg.s</FONT></B> c
-<I><FONT COLOR=GREEN>//000011:             Console.WriteLine(c+b);</FONT></I>
-    IL_0006:  <B><FONT COLOR=NAVY>ldarg.0</FONT></B>
-    IL_0007:  <B><FONT COLOR=NAVY>ldloc.0</FONT></B>
-    IL_0008:  <B><FONT COLOR=NAVY>add</FONT></B>
-    IL_0009:  <B><FONT COLOR=NAVY>call</FONT></B> <B><FONT COLOR=NAVY></FONT></B><B><FONT COLOR=NAVY>void</FONT></B> [<A HREF=#A23000001>mscorlib</A>]System.Console::WriteLine(<B><FONT COLOR=NAVY>int32</FONT></B>)
+    IL_0000:  <B><FONT COLOR=NAVY>ldc.i4.s</FONT></B> 10
+    IL_0002:  <B><FONT COLOR=NAVY>starg.s</FONT></B> c
+<I><FONT COLOR=GREEN>//000011:             Console.WriteLine(c);</FONT></I>
+    IL_0004:  <B><FONT COLOR=NAVY>ldarg.0</FONT></B>
+    IL_0005:  <B><FONT COLOR=NAVY>call</FONT></B> <B><FONT COLOR=NAVY></FONT></B><B><FONT COLOR=NAVY>void</FONT></B> [<A HREF=#A23000001>mscorlib</A>]System.Console::WriteLine(<B><FONT COLOR=NAVY>int32</FONT></B>)
 <I><FONT COLOR=GREEN>//000012:             string a = Console.ReadLine();</FONT></I>
-    IL_000e:  <B><FONT COLOR=NAVY>call</FONT></B> <B><FONT COLOR=NAVY></FONT></B><B><FONT COLOR=NAVY>string</FONT></B> [<A HREF=#A23000001>mscorlib</A>]System.Console::ReadLine()
-    IL_0013:  <B><FONT COLOR=NAVY>stloc.1</FONT></B>
+    IL_000a:  <B><FONT COLOR=NAVY>call</FONT></B> <B><FONT COLOR=NAVY></FONT></B><B><FONT COLOR=NAVY>string</FONT></B> [<A HREF=#A23000001>mscorlib</A>]System.Console::ReadLine()
+    IL_000f:  <B><FONT COLOR=NAVY>stloc.0</FONT></B>
 <I><FONT COLOR=GREEN>//000013:             Console.WriteLine(a);</FONT></I>
-    IL_0014:  <B><FONT COLOR=NAVY>ldloc.1</FONT></B>
-    IL_0015:  <B><FONT COLOR=NAVY>call</FONT></B> <B><FONT COLOR=NAVY></FONT></B><B><FONT COLOR=NAVY>void</FONT></B> [<A HREF=#A23000001>mscorlib</A>]System.Console::WriteLine(<B><FONT COLOR=NAVY>string</FONT></B>)
+    IL_0010:  <B><FONT COLOR=NAVY>ldloc.0</FONT></B>
+    IL_0011:  <B><FONT COLOR=NAVY>call</FONT></B> <B><FONT COLOR=NAVY></FONT></B><B><FONT COLOR=NAVY>void</FONT></B> [<A HREF=#A23000001>mscorlib</A>]System.Console::WriteLine(<B><FONT COLOR=NAVY>string</FONT></B>)
 <I><FONT COLOR=GREEN>//000014:         }</FONT></I>
-    IL_001a:  <B><FONT COLOR=NAVY>ret</FONT></B>
+    IL_0016:  <B><FONT COLOR=NAVY>ret</FONT></B>
   } <I><FONT COLOR=GREEN>// end of method Program::</FONT></I><I><FONT COLOR=GREEN>Test</FONT></I>
 
   <A NAME=A06000003><B><FONT COLOR=NAVY>.method</FONT></B></A> <B><FONT COLOR=NAVY>public hidebysig specialname rtspecialname </FONT></B><B><FONT COLOR=NAVY>instance </FONT></B><B><FONT COLOR=NAVY></FONT></B><B><FONT COLOR=NAVY>void</FONT></B> 
